--- a/todo.org
+++ b/todo.org
@@ -1,5 +1,5 @@
 - [ ] config should require database name
-- [ ] config should require database user
-- [ ] config should require database password (really?)
 - [ ] have migrate try to connect to mysql and fail
 - [ ] finish README
+- [ ] think about: should we really require the database password to be in the
+      migrations configuration file?
