--- a/todo.org
+++ b/todo.org
@@ -4,3 +4,7 @@
       migrations configuration file?
 - [ ] test when user host privilege is incorrect
 - [ ] test when host for schema privilege is incorrect
+- [ ] have test suite run standalone: don't require a locally running mysql server, instead start mysqld for testing purposes locally (on a different port)
+- [ ] warn when creating migration tables in a non-empty database
+- [ ] think about: should we really manage one database at a time? or should we migrate 'sets of databases'? yagni for now
+- [ ] make sure that 'show tables like migrations' does not throw 'unknown table 'migrations' - handle this differently perhaps?
