--- a/todo.org
+++ b/todo.org
@@ -1,4 +1,4 @@
-- [ ] test: only .sql files are treated as migration files
+- [X] test: only .sql files are treated as migration files
 - [ ] finish README
 - [ ] think about: should we really require the database password to be in the
       migrations configuration file?
@@ -9,5 +9,5 @@
 - [ ] think about: should we really manage one database at a time? or should we migrate 'sets of databases'? yagni for now
 - [ ] make sure that 'show tables like migrations' does not throw 'unknown table 'migrations' - handle this differently perhaps?
 - [ ] determine how to handle when migrations caused errors
-- [ ] what to do when there are files in the migrations directory which are not numbered
+- [X] what to do when there are files in the migrations directory which are not numbered
 - [X] migrations should be executed in order
