added some todo's and ordered the most important ones

--- a/todo.org
+++ b/todo.org
@@ -1,13 +1,17 @@
-- [X] test: only .sql files are treated as migration files
+- [ ] warn when creating migration tables in a non-empty database
+- [ ] error when there are migrations with duplicate numbers
+- [ ] determine changes to patch files by running md5sum of migrations
+- [ ] determine how to handle when migrations caused errors
 - [ ] finish README
+- [ ] think about: what to do when there is already a migrations table, but it's not created by migrate?
 - [ ] think about: should we really require the database password to be in the
       migrations configuration file?
 - [ ] test when user host privilege is incorrect
 - [ ] test when host for schema privilege is incorrect
 - [ ] have test suite run standalone: don't require a locally running mysql server, instead start mysqld for testing purposes locally (on a different port)
-- [ ] warn when creating migration tables in a non-empty database
 - [ ] think about: should we really manage one database at a time? or should we migrate 'sets of databases'? yagni for now
 - [ ] make sure that 'show tables like migrations' does not throw 'unknown table 'migrations' - handle this differently perhaps?
-- [ ] determine how to handle when migrations caused errors
+- [ ] when test database is not setup present simple commands to create those (create user, db, privileges, etc)
+- [X] test: only .sql files are treated as migration files
 - [X] what to do when there are files in the migrations directory which are not numbered
 - [X] migrations should be executed in order
