--- a/todo.org
+++ b/todo.org
@@ -1,7 +1,8 @@
-- [ ] warn when creating migration tables in a non-empty database
+- [X] warn when creating migration tables in a non-empty database
 - [ ] error when there are migrations with duplicate numbers
 - [ ] determine changes to patch files by running md5sum of migrations
 - [ ] determine how to handle when migrations caused errors
+- [ ] use 'set -e'
 - [ ] finish README
 - [ ] think about: what to do when there is already a migrations table, but it's not created by migrate?
 - [ ] think about: should we really require the database password to be in the
