--- a/todo.org
+++ b/todo.org
@@ -1,5 +1,5 @@
 - [X] warn when creating migration tables in a non-empty database
-- [ ] error when there are migrations with duplicate numbers
+- [X] error when there are migrations with duplicate numbers
 - [ ] determine changes to patch files by running md5sum of migrations
 - [ ] determine how to handle when migrations caused errors
 - [ ] use 'set -e'
