--- a/todo.org
+++ b/todo.org
@@ -1,22 +1,31 @@
 - [X] warn when creating migration tables in a non-empty database
 - [X] error when there are migrations with duplicate numbers
 - [X] determine changes to patch files by running md5sum of migrations
-- [ ] determine how to handle when migrations caused errors
-- [ ] use 'set -e'
-- [ ] do we also want to support rollbacks? (e.g. down migrations)
-- [ ] make sure this also work on non os x machines
-- [ ] think about how the user would resolve our detected errors and perhaps
-      provide commands to help him
-- [ ] provide a way to pack stacks of migrations into one, to make migrate run faster
-- [ ] support sqlite, postgres
-- [ ] finish README
+- [ ] when test database is not setup present simple commands to create those
+      (create user, db, privileges, etc)
+- [ ] test when user host privilege is incorrect
+- [ ] test when host for schema privilege is incorrect
 - [ ] cleanup temp files used for testing purposes with final signal trap
+- [ ] write more documentation in README
+- [ ] make sure this also work on non os x machines
+- [ ] when migrations caused errors there are probably different methods of
+      resolving the error and continuing, we should support those in an easy way
+- [ ] robustness: use 'set -e', and other good shell scripting practices (see
+      wooledge wiki, books, ..)
+- [ ] think about: do we also want to support rollbacks? (e.g. down
+      migrations)
+- [ ] when a lot of migrations are run (for instance when you are building a
+      database from scratch), running all migrations might take a long time.
+      we could provide a way to pack (like git-pack) stacks of migrations into
+      one 'snapshot', to make the migration run faster.
+- [ ] support other databases: sqlite, postgres, ..?
 - [ ] think about: what to do when there is already a migrations table, but
       it's not created by migrate?
 - [ ] think about: should we really require the database password to be in the
       migrations configuration file?
-- [ ] test when user host privilege is incorrect
-- [ ] test when host for schema privilege is incorrect
+- [ ] support for integration with frameworks and other build systems by also
+      allowing: migrations dir to be elsewhere and/or named differently, have
+      config setting be provided in environment variables and/or parameters
 - [ ] have test suite run standalone: don't require a locally running mysql
       server, instead start mysqld for testing purposes locally (on a
       different port)
@@ -24,8 +33,6 @@
       we migrate 'sets of databases'? yagni for now
 - [ ] make sure that 'show tables like migrations' does not throw 'unknown
       table 'migrations' - handle this differently perhaps?
-- [ ] when test database is not setup present simple commands to create those
-      (create user, db, privileges, etc)
 - [ ] determine if something safer than md5, such as sha1, is needed for this
       application. make a trade off for this and portability
 - [ ] migration IDs should be positive integers
